--- a/tests/auto-start-touch-resume/index.html
+++ b/tests/auto-start-touch-resume/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>web-audio-test auto-start-touch-init</title>
+  <title>web-audio-test auto-start-touch-resume</title>
 </head>
 <body>
   <script type="text/javascript" src="./index.js"></script>
