--- a/tests/decode-promise/index.html
+++ b/tests/decode-promise/index.html
@@ -3,8 +3,20 @@
 <head>
   <meta charset="utf-8">
   <title>web-audio-test decode-promise</title>
+  <link rel="stylesheet" type="text/css" href="https://zprodev.github.io/web-audio-test/lib/vs2015.css">
 </head>
 <body>
   <script type="text/javascript" src="./index.js"></script>
+  <pre><code class="js" id="code"></code></pre>
+  <script type="text/javascript" src="https://zprodev.github.io/web-audio-test/lib/highlight.pack.js"></script>
+  <script>
+    hljs.initHighlightingOnLoad();
+    const codeRequest = new XMLHttpRequest();
+    codeRequest.open('GET', './index.js', true);
+    codeRequest.onload =  () => {
+      document.getElementById('code').appendChild(document.createTextNode(request.response));
+    }
+    codeRequest.send();
+  </script>
 </body>
 </html>
